--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -164,7 +164,7 @@
  STARBASE_NAME:1 "$NAME$"
  STARBASE_STATION_NAME_FORMAT:0 "สถานี $SYSTEM$"
  STARBASE_QUEUE:0 "คิวในฐานอวกาศ"
- STARBASE_MODIFIERS:0 "Starbase Modifiers"
+ STARBASE_MODIFIERS:0 "การปรับเปลี่ยนของฐานอวกาศ"
  DEFENSE_QUEUE:0 "คิวระบบป้องกัน"
  SHIPYARD_QUEUE:0 "คิวอู่ต่อยาน"
  STARBASE_TRIGGER_HAS_NOT_MODULE:0 "Starbase has not module $COMPONENT|Y$"
@@ -193,11 +193,11 @@
  STARBASE_BUILDQUEUE_UP:0 "§GClick to move item up.\nShift-click to move item to top.§!"
  STARBASE_BUILDQUEUE_DOWN:0 "§GClick to move item down.\nShift-click to move item to bottom.§!"
  STARBASE_MODIFIER_EFFECTS:0 "เอฟเฟกต์ที่มีการปรับเปลี่ยน"
- STARBASE_MODIFIER_HYPERLANE_RANGE:0 "£mod_planet_hyperlane_range_add£ Hyperlane Detection Range:"
- STARBASE_MODIFIER_SENSOR_RANGE:0 "£mod_ship_sensor_range_add£ Sensor Range:"
- STARBASE_MODIFIER_PROTECTION:0 "£mod_starbase_trade_protection_add£ Trade Protection:"
- STARBASE_MODIFIER_PROTECTION_RANGE:0 "£mod_starbase_trade_protection_range_add£ Trade Protection Range:"
- STARBASE_MODIFIER_COLLECTION_RANGE:0 "£mod_starbase_trade_collection_range_add£ Trade Collection Range:"
+ STARBASE_MODIFIER_HYPERLANE_RANGE:0 "£mod_planet_hyperlane_range_add£ ระยะการตรวจจับไฮเปอร์เลน:"
+ STARBASE_MODIFIER_SENSOR_RANGE:0 "£mod_ship_sensor_range_add£ ระยะของเซนเซอร์:"
+ STARBASE_MODIFIER_PROTECTION:0 "£mod_starbase_trade_protection_add£ การคุ้มครองการค้า:"
+ STARBASE_MODIFIER_PROTECTION_RANGE:0 "£mod_starbase_trade_protection_range_add£ ระยะคุ้มครองการค้า:"
+ STARBASE_MODIFIER_COLLECTION_RANGE:0 "£mod_starbase_trade_collection_range_add£ ระยะเก็บรวบรวมการค้า:"
  gateway_ruined:0 "เกตเวย์ที่ปิดการใช้งาน"
  gateway_ruined_DESC:0 "The ancient remains of what appears to be a Gateway of some sort. If repaired, this structure could enable starships to rapidly travel to other functional Gateways."
  gateway_ruined_MEGASTRUCTURE_DETAILS:0 ""
@@ -603,7 +603,7 @@
  apoc.200.name:0 "Holy World Candidate"
  apoc.200.desc:0 "In cooperation with theological experts, several scryers have independently confirmed §Y[holy_target.GetName]§! in the [holy_target.GetStarName] system as being worthy of particular veneration.\n\nOfficial recognition is sure to boost the public's appreciation of this mystical world."
  apoc.200.a:0 "May [holy_target.GetName] be hallowed."
- apoc.200.a.tooltip:0 "§Y$holy_player_planet$§! modifier added"
+ apoc.200.a.tooltip:0 "§Y$holy_player_planet$§! เพิ่มการปรับเปลี่ยน"
  apoc.201.name:0 "No Holy World Candidate Found"
  apoc.201.desc:0 "Our top scryers have issued a report stating that no spiritual nexuses are to be found among the planets within our Empire."
  apoc.201.a.tooltip:0 "Edict £influence£ Influence cost is refunded."
