--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -349,7 +349,7 @@
  UPGRADING_BUILD_OBJECT:0 "กำลังอัปเกรด $OBJECT|Y$"
  PLANET_CLASS_PREFERENCE_TRAITS:0 "สิทธิพิเศษในดาวเคราะห์"
  OTHER:0 "อื่นๆ"
- PRIMITIVES:1 "Pre-FTL Civilizations"
+ PRIMITIVES:1 "อารยธรรมดึกดำบรรพ์"
  PRIMITIVE_LIFEFORM:2 "There is at least one Pre-FTL Civilization in this system"
  AGGRESSIVE_STANCE:0 "ท่าทีก้าวร้าว"
  FLEET_IN_FTL:0 "กองยานอยู่ในการเคลื่อนที่เร็วกว่าแสง (FTL)"
@@ -1132,7 +1132,7 @@
  ALLIANCE_MEMBER_DESC:0 "This star nation is a member of a larger interstellar alliance."
  REBELS_UNDER:1 "กบฏต่อ $COUNTRY$"
  REBELS_UNDER_DESC:1 "They began as a rebellion against another star nation, from which they have successfully broken free."
- PRIMITIVE:1 "§HPre-FTL Civilizations ($AGE|Y$)§!"
+ PRIMITIVE:1 "§Hอารยธรรม Pre-FTL ($AGE|Y$)§!"
  PRIMITIVE_NAMED:0 "§H$COUNTRY$ ($AGE|Y$)§!"
  MERGE:0 "รวม"
  LEVEL_X:0 "เลเวล: $LEVEL|Y$"
@@ -1348,7 +1348,7 @@
  CUSTOMIZATION_TOO_FEW_ETHIC_POINTS:0 "คุณต้องเลือกจริยธรรมเพิ่มเติม"
  SHORTCUT:0 "§Gปุ่มลัด: $KEY$ §!"
  SHORTCUT_DOUBLE:0 "§GHotkeys§!: $KEY1$ หรือ $KEY2$"
- MOUSE_SHORTCUT:0 "§GMouse Hotkey: $KEY$ §!"
+ MOUSE_SHORTCUT:0 "§GMouse คีย์ลัด: $KEY$ §!"
  NAMELIST:0 "รายชื่อ"
  CANCEL_SPACEPORT_CONSTRUCTION_DESC:0 "We can cancel the construction of this spaceport for a full refund."
  MODULE_SLOT:0 "ช่องใส่โมดูล"
@@ -1510,7 +1510,7 @@
  FE_TECH_SPEED_TOOLTIP:1 "§H$FE_TECH_SPEED$§!\nThis controls how quickly Technology and Traditions are gained by regular empires. The higher it is, the longer it will take to unlock individual Traditions and Technologies."
  FE_CRISES:1 "ความแข็งแกร่งของไครซิส"
  FE_CRISES_TOOLTIP:3 "§HCrisis Strength§!\nThis controls the fleet strength of endgame crises. The higher the multiplier, the more dangerous the endgame crises will be.\n\nIf the §HCrisis Type§! setting is set to §HAll§!, this value will be multiplied by 1.5 for each endgame crisis survived."
- FE_PRIMITIVE_WORLDS:1 "Pre-FTL Civilizations and Pre-Sapient Species"
+ FE_PRIMITIVE_WORLDS:1 "อารยธรรมดึกดำบรรพ์ (Pre-FTL) และเผ่าพันธุ์พรี-เซเปียนส์"
  FE_PRIMITIVE_WORLDS_TOOLTIP:1 "§H$FE_PRIMITIVE_WORLDS$§!\nThis controls the prevalence of §HPre-FTL Civilizations§! and §HPre-Sapient Species§! in the galaxy.\n\nThe higher it is, the more likely Pre-FTL Civilizations and Pre-Sapient Species will be created on galaxy generation."
  FE_LOGISTIC_CEILING:0 "เพดานการเพิ่มจำนวนประชากรแบบลอจิสติก"
  FE_LOGISTIC_CEILING_TOOLTIP:0 "§H$FE_LOGISTIC_CEILING$§!\nสิ่งนี้ควบคุมว่าโบนัสการเพิ่มของประชากรเมื่อการเพิ่มของประชากร(แบบลอจิสติก)ของดาวเคราะห์อยู่ตรงกลางของเส้นโค้ง ยิ่งมีค่าสูงเท่าไหร่ ประชากรก็จะยิ่งเพิ่มเร็วขึ้นเท่านั้น\n\n§Rคำเตือน:§! การตั้งค่านี้มีผลในช่วงท้ายเกมและมีผลต่อความสมดุลหากเพิ่มค่าดังกล่าวขึ้น"
@@ -1911,7 +1911,7 @@
  OUTLINER_NEW_SPACEPORT_CONSTRUCTION:0 "สถานีท่ายานอวกาศอยู่ระหว่างการก่อสร้าง"
  OUTLINER_COMPLETION:0 "จะแล้วเสร็จใน $MONTHS|Y$ เดือน"
  OUTLINER_COMPLETION_SINGLE:0 "จะแล้วเสร็จใน $MONTHS|Y$ เดือน"
- OUTLINER_PLANET_CONSTRUCTION:0 "Planet Constructions"
+ OUTLINER_PLANET_CONSTRUCTION:0 "การก่อสร้างของดาวเคราะห์"
  OUTLINER_POP_CONSTRUCTION:0 "Pop Constructions"
  OUTLINER_POP_CONSTRUCTION_DESC_CURRENT:0 "การก่อสร้าง $NAME|H$ ($PROGRESS|%0Y$)"
  OUTLINER_POP_CONSTRUCTION_DESC_ADDITIONAL:0 "$COUNT|Y$ additional Pop(s) queued"
@@ -1938,9 +1938,9 @@
  OUTLINER_PLANET_INVASION:1 "$INVADER$ มีกองทัพอยู่ในวงโคจรดาวเคราะห์"
  OUTLINER_PLANET_BLOCKADED:0 "ดาวเคราะห์ถูกปิดกั้นโดย $BLOCKADER$"
  OUTLINER_PLANET_OCCUPIED:0 "ดาวเคราะห์ถูกยึดครองโดย $OCCUPIER$"
- OUTLINER_PLANET_REVOLTING:0 "Planet is revolting"
- OUTLINER_PLANET_DESIGNATION:0 "The colony designation of this planet is $DESIGNATION|H$"
- OUTLINER_PLANET_CLASS:0 "The planet class of this planet is $CLASS|H$"
+ OUTLINER_PLANET_REVOLTING:0 "ดาวเคราะห์กำลังก่อกบฏ"
+ OUTLINER_PLANET_DESIGNATION:0 "การกำหนดอาณานิคมของดาวเคราะห์ดวงนี้คือ $DESIGNATION|H$"
+ OUTLINER_PLANET_CLASS:0 "คลาสของดาวเคราะห์ดวงนี้คือ $CLASS|H$"
  OUTLINER_HABITAT_LEVEL:1 "Habitat Level: $LEVEL|Y$"
  OUTLINER_INVASION_READY:0 "This army can invade $PLANET$. If they are victorious, you will occupy the planet!"
  OUTLINER_FLEET_USE_ARMIES_HINT:0 "§ELand armies to conquer this planet§!"
@@ -1953,7 +1953,7 @@
  OUTLINER_STARBASES:0 "ฐานอวกาศ"
  OUTLINER_SHIPYARDS:0 "อู่ต่อยาน"
  OUTLINER_STARBASE_SHIPYARD_CONSTRUCTION:0 "การก่อสร้างอู่ต่อเรือ"
- OUTLINER_STARBASE_MAIN_CONSTRUCTION:0 "Main Constructions"
+ OUTLINER_STARBASE_MAIN_CONSTRUCTION:0 "โครงสร้างหลัก"
  OUTLINER_REARRANGE_TOOLTIP:0 "§Hจัดลำดับดาวเคราะห์ใหม่§!\n§Gคลิกเพื่อเปลี่ยนลำดับของดาวเคราะห์ของคุณ§!"
  OUTLINER_REARRANGE_TITLE:0 "จัดลำดับดาวเคราะห์ใหม่"
  OUTLINER_REARRANGE_MOVE_TO_UNDER:0 "§HFollow§!\nMove to follow §Ylast moved§! element"
@@ -2276,9 +2276,9 @@
  TIME_RESUME:0 "§Gคลิกเพื่อดำเนินการต่อ§!"
  HOTKEY_SPACE:0 "§Gคีย์ลัด: £space£ §!"
  TIME_SPEED_UP:0 "เร็วขึ้น"
- HOTKEY_KP_PLUS:1 "§GHotkey:§! £kp_plus£ or £shift£ + £arrow_up£"
+ HOTKEY_KP_PLUS:1 "§Gคีย์ลัด:§! £kp_plus£ หรือ £shift£ + £arrow_up£"
  TIME_SPEED_DOWN:0 "ช้าลง"
- HOTKEY_KP_MINUS:1 "§GHotkey:§! £kp_minus£ or £shift£ + £arrow_down£"
+ HOTKEY_KP_MINUS:1 "§Gคีย์ลัด:§! £kp_minus£ หรือ £shift£ + £arrow_down£"
  RESETTLEMENT:0 "การย้ายถิ่นฐาน"
  RUINED_BUILDING_NAME:0 "§H$BUILDING$§! §R(ทรุดโทรม)§!"
  RUINED_BUILDING_DESC:0 "§H$BUILDING$§! §Rทรุดโทรม§!"
@@ -5346,7 +5346,7 @@
  SHIPDESIGNER_SAVEFAIL_INVALID_SECTION:0 "§RThis Ship Design has one or more invalid Sections.§!"
  SHIPDESIGNER_COMPONENT_SLOT_COUNT:0 "$COUNT|Y$"
  SHIPDESIGNER_SECTION_TEMPLATE_TOOLTIP_START:1 "$NAME|H$\nค่าใช้จ่าย: $COST|Y0$"
- SHIPDESIGNER_SECTION_TEMPLATE_TOOLTIP_FINISH:0 "§GClick to select this Section§!"
+ SHIPDESIGNER_SECTION_TEMPLATE_TOOLTIP_FINISH:0 "§Gคลิกเพื่อเลือกส่วนนี้§!"
  SECTION_ENTRY_WEAPON_SLOTS:0 "ช่องใส่อาวุธ"
  SECTION_ENTRY_UTILITY_SLOTS:0 "ช่องอรรถประโยชน์"
  TYPE_OF_NEW_DESIGN:0 "เลือกประเภทยานที่คุณต้องการออกแบบ:"
@@ -9232,7 +9232,7 @@
  POINT_DEFENCE_3:0 "ระบบป้องกันเป็นจุด (Guardian)"
  POINT_DEFENCE_3_DESC:1 "ประเภทกระสุนที่มีให้เลือกใช้มากมายช่วยเพิ่มอัตราการสกัดกั้นภัยคุกคามที่เข้ามาได้อย่างมีประสิทธิภาพ"
  DEFAULT_BEHAVIOR_DESC:1 "§Hยุทธวิธีแบบผสม:§! ยานจะมีแนวทางที่สมดุลระหว่างการโจมตีและการป้องกัน"
- SWARM_BEHAVIOR_DESC:2 "§Hยุทธวิธีแบบฝูง:§! ยานจะพุ่งเข้าใส่ศัตรูโดยตรงและพยายามสร้างความเสียหายให้ได้มากที่สุดจากระยะของอาวุธที่สั้นของพวกเขา"
+ SWARM_BEHAVIOR_DESC:2 "§Hยุทธวิธีแบบฝูง:§! ยานจะพุ่งเข้าใส่ศัตรูโดยตรงและพยายามสร้างความเสียหายให้ได้มากที่สุดจากระยะของอาวุธที่สั้นของมัน"
  ARTILLERY_BEHAVIOR_DESC:2 "§Hยุทธวิธีปืนใหญ่:§! ยานจะอยู่ในระยะไกล ยิงอาวุธระยะไกลที่สุดไปที่เป้าหมาย"
  CARRIER_BEHAVIOR_DESC:1 "§Hยุทธวิธียานแม่:§! ยานจะอยู่ที่ระยะการสู้รบโดยยานลูกขั้นสูงสุด"
  LINE_BEHAVIOR_DESC:2 "§Hยุทธวิธีแถวหน้ากระดาน:§! ยานจะเคลื่อนไปข้างหน้าในระยะกลางจากเป้าหมายและคงรูปแบบกระบวนทัพไว้"
@@ -11246,11 +11246,11 @@
  EXPANSION_PLANNER_COLONY_SHIP_TARGET:0 "ดาวเคราะห์ที่อยู่อาศัยได้"
  EXPANSION_PLANNER_IS_COLONIZABLE:1 "เป็นอาณานิคมได้"
  EXPANSION_PLANNER_IS_COLONIZABLE_DESC:0 "Only show planets we can currently colonize."
- EXPANSION_PLANNER_IS_SURVEYED:1 "สำรวจโดยละเอียดแล้ว"
+ EXPANSION_PLANNER_IS_SURVEYED:1 "สำรวจแล้ว"
  EXPANSION_PLANNER_IS_SURVEYED_DESC:0 "แสดงเฉพาะดาวเคราะห์ที่เราสำรวจโดยละเอียดแล้ว"
  EXPANSION_PLANNER_IS_TERRAFORMING_CANDIDATE:0 "$EXPANSION_PLANNER_TERRAFORMING_CANDIDATE$"
  EXPANSION_PLANNER_IS_TERRAFORMING_CANDIDATE_DESC:0 "Only display uninhabitable planets that we can terraform."
- EXPANSION_PLANNER_TERRAFORMING_CANDIDATE:0 "สามารถปรับสภาพดาวได้"
+ EXPANSION_PLANNER_TERRAFORMING_CANDIDATE:0 "ปรับสภาพดาวได้"
  EXPANSION_PLANNER_HAS_EXPANSION_ENTRY:0 "§HPlanned Colony§!\nThis planet is already targeted for colonization by our Empire."
  EXPANSION_PLANNER_SORT_CLASS:0 "§H$SORT_BY$ $PLANETVIEW_PLANET_CLASS$§!"
  EXPANSION_PLANNER_SORT_HABITABILITY:0 "§H$SORT_BY$ $HABITABILITY$§!"
@@ -11324,25 +11324,25 @@
  EXPLORE_BYPASS_ALREADY_EXPLORED:0 "$BYPASS|Y$ เคยถูกสำรวจมาแล้วก่อนหน้านี้"
  BYPASS_OPEN_BORDERS_REQUIRED:0 "$TRIGGER_FAIL$ $WHO|Y$ ได้ปิดพรมแดนของพวกเขามาที่เรา"
  BYPASS_THEY_ARE_HOSTILE:0 "$TRIGGER_FAIL$ The $WHO|Y$ blocks access as they are hostile to us"
- OUTLINER_PLANET_CONSTRUCTION_AVAILABLE:0 "Building Slots Available"
- OUTLINER_PLANET_CONSTRUCTION_AVAILABLE_DESC:0 "This Planet can support the construction of additional £building£ §YBuildings§!"
- OUTLINER_PLANET_UPGRADE_AVAILABLE:0 "Capital Upgrade Available"
+ OUTLINER_PLANET_CONSTRUCTION_AVAILABLE:0 "ช่องก่อสร้างที่มี"
+ OUTLINER_PLANET_CONSTRUCTION_AVAILABLE_DESC:0 "ดาวดวงนี้สามารถรองรับการก่อสร้าง £building£ §Yสิ่งปลูกสร้าง§! เพิ่มเติมได้"
+ OUTLINER_PLANET_UPGRADE_AVAILABLE:0 "สามารถอัปเกรดเมืองหลวงได้"
  OUTLINER_PLANET_UPGRADE_AVAILABLE_DESC:0 "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ของดาวเคราะห์ดวงนี้ พร้อมที่จะอัปเกรด"
- OUTLINER_PLANET_BLOCKER_AVAILABLE:1 "Clearable Blockers"
- OUTLINER_PLANET_BLOCKER_AVAILABLE_DESC:1 "This Planet has clearable £blocker£ §YBlockers§! that are preventing us from fully exploiting its resources"
- OUTLINER_STARBASE_CONSTRUCTION_AVAILABLE:0 "Component Slots Available"
+ OUTLINER_PLANET_BLOCKER_AVAILABLE:1 "สิ่งกีดขวางที่สามารถเคลียร์ได้"
+ OUTLINER_PLANET_BLOCKER_AVAILABLE_DESC:1 "ดาวดวงนี้มี £blocker£ §Yสิ่งกีดขวาง§! ที่ทำให้เราไม่สามารถใช้ประโยชน์จากทรัพยากรได้อย่างเต็มที่"
+ OUTLINER_STARBASE_CONSTRUCTION_AVAILABLE:0 "ช่องชิ้นส่วนที่ว่าง"
  OUTLINER_STARBASE_CONSTRUCTION_AVAILABLE_DESC:0 "This Starbase can support the construction of additional §YModules§Y and/or §!Buildings§!"
- OUTLINER_STARBASE_UPGRADE_AVAILABLE:0 "Upgrades Available"
+ OUTLINER_STARBASE_UPGRADE_AVAILABLE:0 "สามารถอัปเกรดได้"
  OUTLINER_STARBASE_UPGRADE_AVAILABLE_DESC:1 "This Starbase or its §YDefense Platforms§! can be upgraded"
  OUTLINER_PLANET_UNEMPLOYMENT_PRESENT:0 "ประชากรว่างงาน"
- OUTLINER_PLANET_UNEMPLOYMENT_PRESENT_DESC:1 "This Planet has unemployed £pop£ §YPops§! that will not automatically migrate to other planets, which could be put to work"
- OUTLINER_PLANET_AUTOM_MIGRATION_PRESENT:0 "Migrating Pops"
- OUTLINER_PLANET_AUTOM_MIGRATION_PRESENT_DESC:0 "This Planet has unemployed £pop£ §YPops§! that will automatically migrate to other planets."
- OUTLINER_PLANET_LOW_STABILITY:0 "Low Stability"
- OUTLINER_PLANET_LOW_STABILITY_DESC:0 "This Planet has a stability under $STABILITY_MIN|Y0$."
+ OUTLINER_PLANET_UNEMPLOYMENT_PRESENT_DESC:1 "ดาวเคราะห์ดวงนี้มี £pop£ §Yประชากร§! ที่ไม่มีงานทำและประชากรดังกล่าวจะอพยพไปยังดาวเคราะห์ดวงอื่นที่มีงานทำโดยอัตโนมัติ"
+ OUTLINER_PLANET_AUTOM_MIGRATION_PRESENT:0 "ประชากรย้ายถิ่นฐาน"
+ OUTLINER_PLANET_AUTOM_MIGRATION_PRESENT_DESC:0 "ดาวเคราะห์ดวงนี้มี £pop£ §Yประชากร§! ที่ไม่มีงานทำและประชากรดังกล่าวจะอพยพไปยังดาวเคราะห์ดวงอื่นโดยอัตโนมัติ"
+ OUTLINER_PLANET_LOW_STABILITY:0 "เสถียรภาพต่ำ"
+ OUTLINER_PLANET_LOW_STABILITY_DESC:0 "ดาวนี้มีเสถียรภาพต่ำกว่า $STABILITY_MIN|Y0$"
  OUTLINER_PLANET_OVERCROWDING_PRESENT:0 "ความแออัดยัดเยียด"
- OUTLINER_PLANET_OVERCROWDING_PRESENT_DESC:0 "This Planet lacks enough £housing£ §YHousing§! for all of its Pops"
- OUTLINER_STARBASE_TRADE_HUB_NOT_CONNECTED:1 "Unconnected Starbase"
+ OUTLINER_PLANET_OVERCROWDING_PRESENT_DESC:0 "ดาวนี้ขาดแคลน £housing£ §Yที่อยู่อาศัย§!"
+ OUTLINER_STARBASE_TRADE_HUB_NOT_CONNECTED:1 "ฐานอวกาศที่ไม่ได้เชื่อมต่อกับฐานอวกาศใดๆ"
  OUTLINER_STARBASE_TRADE_HUB_NOT_CONNECTED_DESC:1 "This §YStarbase§! is not connected to the §YTrade Network§!"
  OUTLINER_MEGASTRUCTURE_CAN_BE_UPGRADED:0 "§YCan be upgraded§!"
  OUTLINER_MEGASTRUCTURE_IS_UPGRADING:0 "§YIs being upgraded§!"
@@ -11623,8 +11623,8 @@
  numeral_8_icon:0 "£numeral_8£"
  numeral_9_icon:0 "£numeral_9£"
  numeral_10_icon:0 "£numeral_10£"
- MOD_VERSION:0 "Mod v0.68.1, Update 30/03/2023"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n n/a§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ MOD_VERSION:0 "Mod v0.68.2, Update 02/04/2023"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n เทคโนโลยีพรางตัวใช้ชื่อย่อดังนี้\n- Basic Cloaking Fields -> สนามพลัง B.C. Field\n- Advanced Cloaking Fields -> สนามพลัง A.C. Field\n- Elite Cloaking Fields -> สนามพลัง E.C. Field\n- Dark Matter Cloaking Fields -> สนามพลัง D.M.C. Field\n*ปล.ได้แรงบันดาลใจมาจาก A.T. Field\n\n- Pre-FTL civilizations -> อารยธรรมดึกดำบรรพ์/อารยธรรมก่อนมีเทคโนโลยีขับเคลื่อนเร็วกว่าแสง/อารยธรรม Pre-FTL§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
