--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -705,8 +705,8 @@
  mod_weapon_swarm_weapon_fire_rate_mult:0 "Prethoryn Swarm Weapon Attack Speed"
  mod_weapon_type_space_fauna_weapon_damage_mult:0 "Space Fauna Weapon Damage"
  mod_weapon_type_space_fauna_weapon_fire_rate_mult:0 "Space Fauna Weapon Attack Speed"
- mod_weapon_archaeotech_weapon_damage_mult:0 "Archaeotech Weapon Damage"
- mod_weapon_archaeotech_weapon_fire_rate_mult:0 "Archaeotech Weapon Attack Speed"
+ mod_weapon_archaeotech_weapon_damage_mult:0 "พลังโจมตีอาวุธจากเทคโนโลยีโบราณคดี"
+ mod_weapon_archaeotech_weapon_fire_rate_mult:0 "ความเร็วโจมตีอาวุธจากเทคโนโลยีโบราณคดี"
  mod_shroud_delve_cooldown:0 "คูลดาวน์การล้วงหาข้อมูลสิ่งที่แอบซ่อน"
  vultaum_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
  vultaum_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (จักรวรรดิแรกเริ่ม)"
