--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -1047,8 +1047,8 @@
  ADD_PHYSICS_RESEARCH_EFFECT:0 "$VALUE$ Physics research\n"
  ADD_SOCIETY_RESEARCH_EFFECT:0 "$VALUE$ Society research\n"
  ADD_ENGINEERING_RESEARCH_EFFECT:0 "$VALUE$ Engineering research\n"
- ADD_MODIFIER:1 "$MODNAME|Y$ modifier added\n$EFFECT$\n"
- ADD_MODIFIER_DAYS:1 "$MODNAME|Y$ modifier added for $TIME|Y$ $PERIOD$\n$EFFECT$\n"
+ ADD_MODIFIER:1 "$MODNAME|Y$ เพิ่มการปรับเปลี่ยนดังนี้\n$EFFECT$\n"
+ ADD_MODIFIER_DAYS:1 "$MODNAME|Y$ เพิ่มการปรับเปลี่ยนเป็นเวลา $TIME|Y$ $PERIOD$ ดังนี้\n$EFFECT$\n"
  ADD_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
  REMOVE_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
  REMOVE_OPINION_MODIFIER_ANY:1 "$SCOPE|Y$ removes the $MODNAME|Y$ opinion modifier towards anyone\n"
@@ -1877,8 +1877,8 @@
  SET_AGREEMENT_PRESET_EFFECT_NO_APPLY:0 "Sets preset of the agreement to the $PRESET|Y$ preset"
  HAS_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ does NOT have $COMPARE$ $VAL1|2Y$ loyalty"
  HAS_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ has $COMPARE$ $VAL1|2Y$ loyalty"
- HAS_MONTHLY_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ does NOT have $COMPARE$ $VAL1|2Y$ monthly loyalty"
- HAS_MONTHLY_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ has $COMPARE$ $VAL1|2Y$ monthly loyalty"
+ HAS_MONTHLY_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ ความภักดีต่อเดือนไม่ $COMPARE$ $VAL1|2Y$"
+ HAS_MONTHLY_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ ความภักดีต่อเดือน $COMPARE$ $VAL1|2Y$"
  effect_every_archaeological_site:0 "Every Archeological Site"
  AWARENESS_TRIGGER:0 "Awareness is $COMPARE$ $VALUE|Y$"
  AWARENESS_NOT_TRIGGER:0 "Awareness is NOT $COMPARE$ $VALUE|Y$"
