--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -4055,11 +4055,11 @@
  OL_TOGGLE_VISIBILITY_SECTORS_WITH_FOCUS_DESC:0 "§HShow/Hide§!\nToggle if Sectors with active focus will be shown."
  OL_TOGGLE_VISIBILITY_SECTORS_NO_FOCUS:0 "แสดงเซ็กเตอร์ที่ไม่ได้เปิดใช้งานโฟกัสอยู่"
  OL_TOGGLE_VISIBILITY_SECTORS_NO_FOCUS_DESC:0 "§HShow/Hide§!\nToggle if Sectors with no active focus will be shown."
- OL_PLANET_MODE:0 "Planet Mode"
- OL_PLANET_MODE_PLANET_TYPE:0 "Planet Type"
- OL_PLANET_MODE_PLANET_DESIGNATION:0 "Planet Designation"
- OL_PLANET_MODE_PLANET_TYPE_OVER_DESIGNATION:0 "Type Over Designation"
- OL_PLANET_MODE_PLANET_DESIGNATION_OVER_TYPE:0 "Designation Over Type"
+ OL_PLANET_MODE:0 "โหมดดาวเคราะห์"
+ OL_PLANET_MODE_PLANET_TYPE:0 "ประเภทดาวเคราะห์"
+ OL_PLANET_MODE_PLANET_DESIGNATION:0 "การกำหนดดาวเคราะห์"
+ OL_PLANET_MODE_PLANET_TYPE_OVER_DESIGNATION:0 "ประเภทอยู่บนการกำหนด"
+ OL_PLANET_MODE_PLANET_DESIGNATION_OVER_TYPE:0 "การกำหนดอยู่บนประเภท"
  SECTOR_ADD_ALREADY_ASSIGNED:0 "§R$SYSTEM|Y$ already belongs to a sector.§!"
  SECTOR_ADD_DONT_OWN_STARBASE:0 "§RWe do not own the starbase in $SYSTEM|Y$.§!"
  SECTOR_ADD_FOREIGN_COLONIES:0 "§R$SYSTEM|Y$ contains colonies owned by other empires.§!"
