--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -843,7 +843,7 @@
  r_research:1 "£physics£ £society£ £engineering£ §YResearch Points§!"
  r_amenities:1 "£amenities£ §YAmenities§!"
  r_trade_value:1 "£trade_value£ §YTrade Value§!"
- r_loyalty:1 "£loyalty£ §YMonthly Loyalty§!"
+ r_loyalty:1 "£loyalty£ §Yความภักดีต่อเดือน§!"
  r_rare_crystals:1 "£rare_crystals£ §Y$rare_crystals$§!"
  r_volatile_motes:1 "£volatile_motes£ §Y$volatile_motes$§!"
  r_exotic_gases:1 "£exotic_gases£ §Y$exotic_gases$§!"
